--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      ::-webkit-scrollbar{
+        background-color: transparent;
+        width: 6px;
+        height: 14px;
+        border-radius: 4px 4px 0 0;
+      }
+      ::-webkit-scrollbar-thumb{
+        background:#1b9347 ;
+        border-radius: 6px;
+      }
+    </style>    
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -27,6 +39,7 @@
     <title>React App</title>
   </head>
   <body>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
